@@ -30,3 +30,4 @@ TODO:
   - Sketch out workflow of creating a new task and assigning tabs to each task.
 - When the GUI is escaped, return focus to last focused application before the interruption.
 - Use nullability annotation and in/out annotation for C function parameters.
+- Find another way of writing unit tests for the daemon's engine after the refactor.
